--- a/index.html
+++ b/index.html
@@ -17,6 +17,40 @@
         <h1>My first Web Bootstrap</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati dolore placeat expedita ratione ipsa? Molestiae libero reiciendis, ab esse corporis facilis quaerat eligendi? Eos nemo iusto libero quasi commodi dolore?</p>
     </div>
+
+
+    <!--SLIDE-->
+
+
+    <div id="demo" class="carousel slide container" data-ride="carousel">
+
+        <ul class="carousel-indicators">
+            <li data-target="#demo" data-slide-to="0" class="active"></li>
+            <li data-target="#demo" data-slide-to="1"></li>
+            <li data-target="#demo" data-slide-to="2"></li>
+        </ul>
+
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="images/banner1.jpg" alt="1">
+            </div>
+            <div class="carousel-item">
+                <img src="images/banner2.jpg" alt="2">
+            </div>
+            <div class="carousel-item">
+                <img src="images/banner3.jpg" alt="3">
+            </div>
+        </div>
+
+        <a href="#demo" class="carousel-control-prev" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a href="#demo" class="carousel-control-next" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+
+    </div>
+
     <!-- Thanh tác vụ-->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark container sticky-top">
         <!-- Brand -->
@@ -62,6 +96,9 @@
     <!--Avartar-->
 
     <img class="img-fluid p-4 mx-auto d-block rounded-circle" src="https://i.pinimg.com/236x/9d/65/ae/9d65aecc033dadd76d8556ae07cf24e9.jpg" />
+
+    <!--3 cột-->
+
     <div class="container">
         <div class="row">
             <div class="col-md-4">
@@ -145,7 +182,6 @@
             </table>
         </div>
     </div>
-    </div>
 
 
     <!-- **********CARD**********-->
@@ -168,7 +204,7 @@
     <!--********************* FORM *************************-->
 
     <div class="container">
-        <form class="form-inline">
+        <form class="was-validated">
             <div class="form-group">
                 <label for="email">Email address:</label>
                 <input type="email" class="form-control mb-2 mr-sm-2" placeholder="Enter email" id="email">
@@ -183,11 +219,45 @@
                 </label>
             </div>
             <button type="submit" class="btn btn-primary mb-2">Submit</button>
+            <div class="form-group">
+                <label for="comment">Comment</label>
+                <textarea class="form-control" rows="5" id="comment"></textarea>
+            </div>
+        </form>
+    </div>
+    <div class="container">
+        <div class="form-check">
+            <label class="form-check-label">
+            <input type="checkbox" class="form-check-input" value="">Option 1
+        </label>
+        </div>
+        <div class="form-check">
+            <label class="form-check-label">
+            <input type="checkbox" class="form-check-input" value="">Option 2
+        </label>
+        </div>
+        <div class="form-check">
+            <label class="form-check-label">
+            <input type="checkbox" class="form-check-input" value="" disabled>Option 3
+        </label>
+        </div>
+        <input type="range" class="form-control-range my-3">
+        <input type="file" class="form-control-file border my-3">
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Search">
+            <div class="input-group-append">
+                <button class="btn btn-success" type="submit">Go</button>
+            </div>
+        </div>
+        <form>
+            <div class="custom-control custom-switch">
+                <input type="checkbox" class="custom-control-input" id="switch1">
+                <label class="custom-control-label" for="switch1">Toggle me</label>
+            </div>
         </form>
     </div>
 
-
-
+    <!--END FORM-->
 
     <div class="container">
         <div class="progress my-5">
@@ -217,6 +287,9 @@
         <div id="demo" class="collapse">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum adipisci maiores accusantium incidunt soluta veritatis reiciendis quidem, delectus in quibusdam perspiciatis quaerat quia temporibus, mollitia, ea optio odit molestiae doloremque.
         </div>
+
+
+        <!--lưới cột-->
         <div class="card-columns">
             <div class="card bg-primary">
                 <div class="card-body text-center">
@@ -280,6 +353,9 @@
     <div id="finish"></div>
     </div>
 </body>
+
+
+
 <style>
     #thumnail {
         max-width: 300px;
