--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="format.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
@@ -354,23 +355,5 @@
     </div>
 </body>
 
-
-
-<style>
-    #thumnail {
-        max-width: 300px;
-        max-height: 400px;
-    }
-    
-    .hoso {
-        width: 200px;
-        height: 200px;
-    }
-    
-    #card {
-        width: 230px;
-        text-align: center;
-    }
-</style>
 
 </html>
